test new layout

--- a/index.html
+++ b/index.html
@@ -1,1 +1,111 @@
-Here's the first commit for the website!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cybersecurity Portfolio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Roboto', sans-serif;
+            line-height: 1.6;
+            background-color: #1e1e1e;
+            color: #f0f0f0;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #333;
+            padding: 20px;
+            text-align: center;
+        }
+        header h1 {
+            margin: 0;
+            color: #00e676;
+        }
+        .content {
+            max-width: 800px;
+            margin: 40px auto;
+            padding: 0 20px;
+        }
+        h2 {
+            color: #00b0ff;
+        }
+        .project {
+            background-color: #444;
+            padding: 15px;
+            border-radius: 5px;
+            margin-bottom: 20px;
+        }
+        .project-title {
+            color: #ffd54f;
+            font-weight: bold;
+            margin: 0;
+        }
+        .project-description {
+            margin: 10px 0;
+        }
+        footer {
+            background-color: #333;
+            color: #bbb;
+            text-align: center;
+            padding: 20px;
+            margin-top: 40px;
+        }
+        a {
+            color: #00e676;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Cybersecurity Portfolio</h1>
+    </header>
+
+    <div class="content">
+        <section>
+            <h2>About Me</h2>
+            <p>Hello! I'm a cybersecurity professional with a passion for defending networks, systems, and sensitive data. I have a background in penetration testing, threat analysis, and building security automation tools. In my free time, I work on projects that help improve security workflows and contribute to the open-source community.</p>
+        </section>
+
+        <section>
+            <h2>Work Experience</h2>
+            <p>Throughout my career, I have been involved in various roles that focused on enhancing the security posture of organizations. From being a security analyst to working as a penetration tester, my journey has given me exposure to a range of environments, from startups to large enterprises.</p>
+            <ul>
+                <li><strong>Security Engineer</strong> - XYZ Corp (2021 - Present)</li>
+                <li><strong>Penetration Tester</strong> - Secure Solutions Inc (2019 - 2021)</li>
+                <li><strong>Threat Intelligence Analyst</strong> - CyberDefend (2017 - 2019)</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Projects</h2>
+            <div class="project">
+                <p class="project-title">Artifact Analyzer Tool</p>
+                <p class="project-description">An automated tool for checking GitHub repository build artifacts for sensitive information leaks. This project aims to help engineers detect misconfigurations before they become potential security risks.</p>
+                <a href="https://github.com/yourusername/artifact-analyzer" target="_blank">View on GitHub</a>
+            </div>
+            <div class="project">
+                <p class="project-title">Email Tool</p>
+                <p class="project-description">A script for streamlining email-based notifications for important events. This project automates email sending for notifications, making it easier to stay on top of critical alerts.</p>
+                <a href="https://github.com/yourusername/email-tool" target="_blank">View on GitHub</a>
+            </div>
+            <div class="project">
+                <p class="project-title">Threat Intelligence Blog</p>
+                <p class="project-description">A web app built with FastAPI to provide insights into the latest threat actor activities, highlighting tactics and tools observed in recent attacks.</p>
+                <a href="https://github.com/yourusername/threat-intel-blog" target="_blank">View on GitHub</a>
+            </div>
+        </section>
+    </div>
+
+    <footer>
+        <p>Contact me at: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+        <p>&copy; 2024 Cybersecurity Portfolio</p>
+    </footer>
+</body>
+</html>
+
