--- a/index.html
+++ b/index.html
@@ -87,17 +87,12 @@
             <div class="project">
                 <p class="project-title">Artifact Analyzer Tool</p>
                 <p class="project-description">An automated tool for checking GitHub repository build artifacts for sensitive information leaks. This project aims to help engineers detect misconfigurations before they become potential security risks.</p>
-                <a href="https://github.com/yourusername/artifact-analyzer" target="_blank">View on GitHub</a>
+                <a href="https://github.com/suaveethedev/GitHub-Artifact-Analyzer" target="_blank">View on GitHub</a>
             </div>
             <div class="project">
                 <p class="project-title">Email Tool</p>
-                <p class="project-description">A script for streamlining email-based notifications for important events. This project automates email sending for notifications, making it easier to stay on top of critical alerts.</p>
-                <a href="https://github.com/yourusername/email-tool" target="_blank">View on GitHub</a>
-            </div>
-            <div class="project">
-                <p class="project-title">Threat Intelligence Blog</p>
-                <p class="project-description">A web app built with FastAPI to provide insights into the latest threat actor activities, highlighting tactics and tools observed in recent attacks.</p>
-                <a href="https://github.com/yourusername/threat-intel-blog" target="_blank">View on GitHub</a>
+                <p class="project-description">A Python utility that verifies key DNS records (MX, SPF, DKIM, DMARC) for any domain to enhance email security. It provides actionable insights to help prevent issues like email spoofing and delivery failures.</p>
+                <a href="https://github.com/suaveethedev/email-tool" target="_blank">View on GitHub</a>
             </div>
         </section>
     </div>
