--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     </div>
 
     <footer>
-        <p>Contact me at: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+        <p>Contact me at: <a href="mailto:jboseman3@outlook.com">jboseman3@outlook.com</a></p>
         <p>&copy; 2024 Cybersecurity Portfolio</p>
     </footer>
 </body>
