--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
         body {
             font-family: 'Roboto', sans-serif;
             line-height: 1.6;
-            background-color: #1e1e1e;
-            color: #f0f0f0;
+            background-color: #f5f5dc; /* Khaki tone for a calm background */
+            color: #4b5d49; /* Sage green for text */
             margin: 0;
             padding: 0;
         }
         header {
-            background-color: #333;
+            background-color: #8f9779; /* Sage green tone */
             padding: 20px;
             text-align: center;
         }
         header h1 {
             margin: 0;
-            color: #00e676;
+            color: #faf0e6; /* Light beige to contrast with sage green */
         }
         .content {
             max-width: 800px;
@@ -29,37 +29,38 @@
             padding: 0 20px;
         }
         h2 {
-            color: #00b0ff;
+            color: #a49a87; /* Soft khaki tone for headings */
         }
         .project {
-            background-color: #444;
+            background-color: #dcdcb0; /* Light khaki for project cards */
             padding: 15px;
             border-radius: 5px;
             margin-bottom: 20px;
         }
         .project-title {
-            color: #ffd54f;
+            color: #556b2f; /* Dark sage green for project titles */
             font-weight: bold;
             margin: 0;
         }
         .project-description {
             margin: 10px 0;
+            color: #6b8e23; /* Muted olive green for descriptions */
         }
         footer {
-            background-color: #333;
-            color: #bbb;
+            background-color: #8f9779; /* Matching sage green footer */
+            color: #faf0e6; /* Light beige text for footer */
             text-align: center;
             padding: 20px;
             margin-top: 40px;
         }
         a {
-            color: #00e676;
+            color: #6b8e23; /* Muted olive green for links */
             text-decoration: none;
         }
         a:hover {
             text-decoration: underline;
         }
-    </style>
+    </style>    
 </head>
 <body>
     <header>
@@ -69,17 +70,17 @@
     <div class="content">
         <section>
             <h2>About Me</h2>
-            <p>Hello! I'm a cybersecurity professional with a passion for defending networks, systems, and sensitive data. I have a background in penetration testing, threat analysis, and building security automation tools. In my free time, I work on projects that help improve security workflows and contribute to the open-source community.</p>
+            <p>Hello! I'm a cybersecurity professional with a passion for protecting data, collaborating, and learning. I have a background in System/Cloud engineering, Vulnerability Management, and Python Programming. In my free time, I work on projects that help improve my knowledge and experience with computers to help protect networks and data.</p>
         </section>
 
         <section>
             <h2>Work Experience</h2>
             <p>Throughout my career, I have been involved in various roles that focused on enhancing the security posture of organizations. From being a security analyst to working as a penetration tester, my journey has given me exposure to a range of environments, from startups to large enterprises.</p>
-            <ul>
-                <li><strong>Security Engineer</strong> - XYZ Corp (2021 - Present)</li>
-                <li><strong>Penetration Tester</strong> - Secure Solutions Inc (2019 - 2021)</li>
-                <li><strong>Threat Intelligence Analyst</strong> - CyberDefend (2017 - 2019)</li>
-            </ul>
+            <ol>
+                <li><strong>Security Engineer</strong> - Workday (October 2021 - Present)</li>
+                <li><strong>Systems Engineer</strong> - GEICO (Jun 2018 - October 2021)</li>
+                <li><strong>Information Technology Administrator</strong> - Penn State University (Jan 2018 - Jun 2018)</li>
+            </ol>
         </section>
 
         <section>
