updated home page

--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
         body {
             font-family: 'Roboto', sans-serif;
             line-height: 1.6;
-            background-color: #f5f5dc; /* Khaki tone for a calm background */
-            color: #4b5d49; /* Sage green for text */
+            background-color: #cec4a7; /* Light Taupe for a calm, natural feel */
+            color: #4a4842; /* Soft charcoal for readable, warm text */
             margin: 0;
             padding: 0;
         }
         header {
-            background-color: #8f9779; /* Sage green tone */
+            background-color: #9b9e88; /* Muted sage green for tranquility */
             padding: 20px;
             text-align: center;
         }
         header h1 {
             margin: 0;
-            color: #faf0e6; /* Light beige to contrast with sage green */
+            color: #f7f3e9; /* Warm ivory for header text */
         }
         .content {
             max-width: 800px;
@@ -29,48 +29,53 @@
             padding: 0 20px;
         }
         h2 {
-            color: #a49a87; /* Soft khaki tone for headings */
+            color: #6d7046; /* Desaturated olive green for headings */
         }
         .project {
-            background-color: #dcdcb0; /* Light khaki for project cards */
+            background-color: #e0d8b0; /* Pale beige for project cards */
             padding: 15px;
             border-radius: 5px;
             margin-bottom: 20px;
         }
         .project-title {
-            color: #556b2f; /* Dark sage green for project titles */
+            color: #786d44; /* Rich olive green for project titles */
             font-weight: bold;
             margin: 0;
         }
         .project-description {
             margin: 10px 0;
-            color: #6b8e23; /* Muted olive green for descriptions */
+            color: #4a4842; /* Soft charcoal for project descriptions */
         }
         footer {
-            background-color: #8f9779; /* Matching sage green footer */
-            color: #faf0e6; /* Light beige text for footer */
+            background-color: #767a5c; /* Deeper sage green for footer */
+            color: #f7f3e9; /* Warm ivory text for contrast */
             text-align: center;
             padding: 20px;
             margin-top: 40px;
         }
         a {
-            color: #6b8e23; /* Muted olive green for links */
+            color: #6d7046; /* Desaturated olive green for links */
             text-decoration: none;
         }
         a:hover {
             text-decoration: underline;
         }
-    </style>    
+    </style>        
 </head>
 <body>
     <header>
         <h1>Cybersecurity Portfolio</h1>
     </header>
-
+    <div class="dropbtn">
+        <button>Dropdown</button>
+        <div id="myDropdown" class="dropdown-content">
+            <a href="./projects.html">Projects</a>
+          </div>
+    </div>
     <div class="content">
         <section>
             <h2>About Me</h2>
-            <p>Hello! I'm a cybersecurity professional with a passion for protecting data, collaborating, and learning. I have a background in System/Cloud engineering, Vulnerability Management, and Python Programming. In my free time, I work on projects that help improve my knowledge and experience with computers to help protect networks and data.</p>
+            <p>Hello! I'm a cybersecurity professional with a passion for protecting data, collaborating, and learning. I have a background in System/Cloud Engineering, Vulnerability Management, and Python Programming. In my free time, I work on projects that help improve my knowledge and experience with computers to help protect networks and data.</p>
         </section>
 
         <section>
